Added Project section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
     <section id="projects">
         <div class="container">
             <div class="project-card">
-
+                <h3 class="project-title">Turbinada</h3>
+                <div class="picture-box">
+                    <img class="project-picture" src="imgs/turbinada.png" alt="Turbinada Project">
+                </div>
+                <ul>
+                    <li>
+                        <ion-icon name="earth-outline"></ion-icon>
+                        <a href="https://mtscampagnolo.github.io/turbinada/" target="_blank" aria-label="Visit the project website" data-value="WEBSITE" class="proj-link">
+                            WEBSITE
+                        </a>
+                    </li>
+                    <li>
+                        <ion-icon name="code-slash-outline"></ion-icon>
+                        <a href="https://github.com/mtscampagnolo/turbinada" target="_blank" aria-label="Check the repository" data-value="REPOSITORY" class="proj-link">
+                            REPOSITORY
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
